# libicp

./: .gitignore  CMakeLists.txt  README.TXT
src/: demo.cpp  demo_projective.cpp  icp.cpp  icp.h  icpPointToPlane.cpp  icpPointToPlane.h  kdtree.cpp  matrix.h
